[tool]
[tool.pdm]

[project]
name = "jarvis"
version = "0.1.0"
description = "AI based home assistant chatbot"
authors = [ {name = "", email = ""}, ]
dependencies = [
    "requests>=2.28.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "None"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[project.scripts]
jarvis = "jarvis:main"
